# wanderer

./: .gitignore  Cargo.toml
src/: main.rs
src/ai/: mod.rs  pickers.rs  scorers.rs
src/components/: mod.rs  npc.rs  player.rs
src/events/: player.rs
src/map/: mod.rs
src/resources/: mod.rs
src/systems/: action.rs  enemy.rs  grid.rs  mod.rs  movement.rs  obstacle.rs  player.rs  ranged.rs  shared.rs  ui.rs
src/utils/: mod.rs
