[package]
name = "wanderer"
version = "0.1.0"
authors = ["Vilém Pavlíček <pavlicek@cngroup.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
rand = "0.8.3"
bevy_egui = "0.7.1"
chrono = "0.4.19"
num-integer = "0.1.44"
