[package]
name = "wanderer"
version = "0.1.0"
authors = ["Vilém Pavlíček <pavlicek@cngroup.dk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
rand = "0.8.4"
bevy_egui = "0.14.0"
chrono = "0.4.19"
num-integer = "0.1.44"
big-brain = "0.11.0"
