[package]
name = "wanderer"
version = "0.1.0"
authors = ["Vilém Pavlíček <pavlicek@cngroup.dk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
rand = "0.8.4"
bevy_egui = "0.27"
chrono = "0.4.19"
num-integer = "0.1.44"
big-brain = "0.20.0"
